[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=12.9.0",
    "arize-phoenix-otel>=0.13.1",
    "chainlit",
    "chromadb",
    "google-genai>=1.48.0",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langchain-text-splitters",
    "ollama",
    "openinference-instrumentation-google-genai>=0.1.8",
    "pdfminer-six",
    "pytesseract",
    "tesseract",
    "transformers",
]

