[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix",
    "arize-phoenix-otel",
    "chainlit",
    "chromadb",
    "google-genai",
    "langchain[google-genai,openai]",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langchain-text-splitters",
    "ollama",
    "openai",
    "openinference-instrumentation-google-genai",
    "pdfminer-six",
    "pytesseract",
    "tesseract",
    "transformers",
    "openinference-instrumentation-langchain",
    "deepeval>=3.3.9",
]

